[tool.poetry]
name = "htrace"
version = "0.2.4"
description = "Tracing HTTP requests over redirects, link headers"
authors = ["datadavev <605409+datadavev@users.noreply.github.com>"]
license = "Apache 2.0"
readme = "README.md"
repository = "https://github.com/datadavev/htrace"
keywords = ["http", "debug", "trace"]

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.25.1"
click = "^7.1.2"
dateparser = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
htrace = "htrace.__main__:main"